--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,8 @@
 
 .crypto-block {
-    border-style: solid;
-    border-width: 2px;
+    padding: 5px 15px;
+    margin: 5px 5px;
+    width: stretch;
 }
 
 .page-header {
@@ -17,3 +18,4 @@
 .container {
     padding-top : 5%;
 }
+
